--- a/restaurantapp/templates/base.html
+++ b/restaurantapp/templates/base.html
@@ -12,7 +12,9 @@
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- site metas -->
 
-   <title> </title>
+   <title>MomoHub{% block title%}
+     
+   {% endblock title%} </title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -24,6 +26,9 @@
 <!-- custom css -->
  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
  <link rel="stylesheet" href="{% static 'css/ss.css' %}">
+
+ <!-- Favicon -->
+  <link rel="icon" href="{% static 'images/favicon.ico' %}">
 
 
  <!-- Aos Animation css -->
