--- a/restaurantapp/templates/restaurantapp/about.html
+++ b/restaurantapp/templates/restaurantapp/about.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title%}
+     About-us
+   {% endblock title%}
 {% load static %}
 {% block content %}
         
