--- a/restaurantapp/templates/restaurantapp/index.html
+++ b/restaurantapp/templates/restaurantapp/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title%}
+     Home
+   {% endblock title%}
 {% load static %}
 {% block content %}
    <!-- banner section start -->
