--- a/restaurantapp/templates/restaurantapp/menu.html
+++ b/restaurantapp/templates/restaurantapp/menu.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title%}
+     Our Menu
+   {% endblock title%}
 {% load static %}
 {% block content %}
         
