--- a/restaurantapp/templates/restaurantapp/services.html
+++ b/restaurantapp/templates/restaurantapp/services.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title%}
+     services
+   {% endblock title%}
 {% load static %}
 {% block content %}
         
